--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name_readable"
+            android:parentActivityName=".LoginActivity"></activity>
+        <activity
             android:name=".RegisterActivity"
-            android:parentActivityName=".LoginActivity"
-            android:label="@string/register_title">
-        </activity>
+            android:label="@string/register_title"
+            android:parentActivityName=".LoginActivity"></activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
